// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab structure with custom tab component :  default options 1`] = `
<div>
  <li
    aria-controls="rc-dyn-tabs-p-1"
    aria-expanded={true}
    aria-label="tab1 tootltip"
    aria-selected={true}
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    id="rc-dyn-tabs-l-1"
    onClick={[Function]}
    role="tab"
    tab-id="1"
    tabIndex={0}
    title="tab1 tootltip"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-2"
    aria-expanded={false}
    aria-label="tab2"
    aria-selected={false}
    className="rc-dyn-tabs-tab"
    id="rc-dyn-tabs-l-2"
    onClick={[Function]}
    role="tab"
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
      <span
        className="rc-dyn-tabs-icon ui-icon ui-icon-disk"
        role="presentation"
      />
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-3"
    aria-expanded={false}
    aria-label="tab3"
    aria-selected={false}
    className="rc-dyn-tabs-tab rc-dyn-tabs-disable"
    id="rc-dyn-tabs-l-3"
    onClick={[Function]}
    role="tab"
    tab-id="3"
    tabIndex={-1}
    title="tab3"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="3"
      tabIndex={-1}
    >
      tab3
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-4"
    aria-expanded={false}
    aria-label="tab4"
    aria-selected={false}
    className="rc-dyn-tabs-tab"
    id="rc-dyn-tabs-l-4"
    onClick={[Function]}
    role="tab"
    tab-id="4"
    tabIndex={-1}
    title="tab4"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="4"
      tabIndex={-1}
    >
      tab4
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with custom tab component :  rtl and none accessibility options 1`] = `
<div>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    onClick={[Function]}
    tab-id="1"
    tabIndex={0}
    title="tab1 tootltip"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
  </li>
  <li
    className="rc-dyn-tabs-tab"
    onClick={[Function]}
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
      <span
        className="rc-dyn-tabs-icon ui-icon ui-icon-disk"
        role="presentation"
      />
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-disable"
    onClick={[Function]}
    tab-id="3"
    tabIndex={-1}
    title="tab3"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="3"
      tabIndex={-1}
    >
      tab3
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
  <li
    className="rc-dyn-tabs-tab"
    onClick={[Function]}
    tab-id="4"
    tabIndex={-1}
    title="tab4"
  >
    <button
      className="rc-dyn-tabs-title userTabComponent"
      role="presentation"
      tab-id="4"
      tabIndex={-1}
    >
      tab4
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with default options :  default tab data 1`] = `
<div>
  <li
    aria-controls="rc-dyn-tabs-p-1"
    aria-expanded={true}
    aria-label="tab1"
    aria-selected={true}
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    id="rc-dyn-tabs-l-1"
    onClick={[Function]}
    role="tab"
    tab-id="1"
    tabIndex={0}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-2"
    aria-expanded={false}
    aria-label="tab2"
    aria-selected={false}
    className="rc-dyn-tabs-tab"
    id="rc-dyn-tabs-l-2"
    onClick={[Function]}
    role="tab"
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with default options :  disabled tab 1`] = `
<div>
  <li
    aria-controls="rc-dyn-tabs-p-1"
    aria-expanded={true}
    aria-label="tab1"
    aria-selected={true}
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected rc-dyn-tabs-disable"
    id="rc-dyn-tabs-l-1"
    onClick={[Function]}
    role="tab"
    tab-id="1"
    tabIndex={-1}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-2"
    aria-expanded={false}
    aria-label="tab2"
    aria-selected={false}
    className="rc-dyn-tabs-tab rc-dyn-tabs-disable"
    id="rc-dyn-tabs-l-2"
    onClick={[Function]}
    role="tab"
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with default options :  none closable tab 1`] = `
<div>
  <li
    aria-controls="rc-dyn-tabs-p-1"
    aria-expanded={true}
    aria-label="tab1"
    aria-selected={true}
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    id="rc-dyn-tabs-l-1"
    onClick={[Function]}
    role="tab"
    tab-id="1"
    tabIndex={0}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-2"
    aria-expanded={false}
    aria-label="tab2"
    aria-selected={false}
    className="rc-dyn-tabs-tab"
    id="rc-dyn-tabs-l-2"
    onClick={[Function]}
    role="tab"
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
    </button>
  </li>
</div>
`;

exports[`tab structure with default options :  tab with provided tooltip and iconClass 1`] = `
<div>
  <li
    aria-controls="rc-dyn-tabs-p-1"
    aria-expanded={true}
    aria-label="tab1"
    aria-selected={true}
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    id="rc-dyn-tabs-l-1"
    onClick={[Function]}
    role="tab"
    tab-id="1"
    tabIndex={0}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
      <span
        className="rc-dyn-tabs-icon ui-icon ui-icon-home"
        role="presentation"
      />
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
  <li
    aria-controls="rc-dyn-tabs-p-2"
    aria-expanded={false}
    aria-label="tab2"
    aria-selected={false}
    className="rc-dyn-tabs-tab"
    id="rc-dyn-tabs-l-2"
    onClick={[Function]}
    role="tab"
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
      <span
        className="rc-dyn-tabs-icon ui-icon ui-icon-book"
        role="presentation"
      />
    </button>
    <span
      className="rc-dyn-tabs-close"
      role="button"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with rtl and none accessibility options :  default tab data 1`] = `
<div>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    onClick={[Function]}
    tab-id="1"
    tabIndex={0}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
  <li
    className="rc-dyn-tabs-tab"
    onClick={[Function]}
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with rtl and none accessibility options :  disabled tab 1`] = `
<div>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected rc-dyn-tabs-disable"
    onClick={[Function]}
    tab-id="1"
    tabIndex={-1}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-disable"
    onClick={[Function]}
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
</div>
`;

exports[`tab structure with rtl and none accessibility options :  none closable tab 1`] = `
<div>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    onClick={[Function]}
    tab-id="1"
    tabIndex={0}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
    </button>
  </li>
  <li
    className="rc-dyn-tabs-tab"
    onClick={[Function]}
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
    </button>
  </li>
</div>
`;

exports[`tab structure with rtl and none accessibility options :  tab with provided tooltip and iconClass 1`] = `
<div>
  <li
    className="rc-dyn-tabs-tab rc-dyn-tabs-selected"
    onClick={[Function]}
    tab-id="1"
    tabIndex={0}
    title="tab1"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="1"
      tabIndex={-1}
    >
      tab1
      <span
        className="rc-dyn-tabs-icon ui-icon ui-icon-home"
        role="presentation"
      />
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
  <li
    className="rc-dyn-tabs-tab"
    onClick={[Function]}
    tab-id="2"
    tabIndex={-1}
    title="tab2"
  >
    <button
      className="rc-dyn-tabs-title"
      role="presentation"
      tab-id="2"
      tabIndex={-1}
    >
      tab2
      <span
        className="rc-dyn-tabs-icon ui-icon ui-icon-heart"
        role="presentation"
      />
    </button>
    <span
      className="rc-dyn-tabs-close"
    >
      ×
    </span>
  </li>
</div>
`;
